--- a/QBU9QL_szerveroldali/Views/Home/Index.cshtml
+++ b/QBU9QL_szerveroldali/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <ul>
                 <li>@contact.PhoneNumber</li>
             </ul>
-
+            <a href="Home/Delete?uid=@contact.Id">Delete</a>
         </li>
     }
 </ul>
