--- a/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
+++ b/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">QBU9QL_szerveroldali</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Accident Detector Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Add">Add Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListTravel">List Travels</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travel" asp-action="ListTravel">List Travels</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddTravel">Add Travel</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travel" asp-action="AddTravel">Add Travel</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -45,6 +45,11 @@
             @RenderBody()
         </main>
     </div>
+
+
+    <a href="@Url.Action("Index", "Home")" class="navbar-brand">
+        <img src="img/accomodator-mini.png" title="title" alt="additional title" />
+    </a>
 
     <footer class="border-top footer text-muted">
         <div class="container">
