--- a/QBU9QL_szerveroldali/Views/Home/Index.cshtml
+++ b/QBU9QL_szerveroldali/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     {
         <li class="title">@contact.Name
             <ul>
-                <li>@contact.PhoneNumber</li>
+                <li>Phone: @contact.PhoneNumber</li>
             </ul>
             <a href="Home/Delete?uid=@contact.Id">Delete</a>
         </li>
