--- a/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
+++ b/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/QBU9QL_szerveroldali.styles.css" asp-append-version="true" />
 </head>
+
 <body>
     <header>
+        
+
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Accident Detector Web</a>
@@ -35,6 +38,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <partial name = "_AdminPartial" />
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
