--- a/QBU9QL_szerveroldali/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/QBU9QL_szerveroldali/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -23,8 +23,20 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <div class="form-floating">
+                <input asp-for="Input.FirstName" class="form-control" autocomplete="firstname" />
+                <label asp-for="Input.FirstName" class="form-label"></label>
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.LastName" class="form-control" autocomplete="lastname" />
+                <label asp-for="Input.LastName" class="form-label"></label>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <input type="hidden" asp-for="Input.PictureUrl" >
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+        <img src="@Model.Input.PictureUrl" />
     </div>
 </div>
 
