--- a/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
+++ b/QBU9QL_szerveroldali/Views/Shared/_Layout.cshtml
@@ -39,7 +39,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <partial name = "_AdminPartial" />
-                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Galery" asp-action="AddPhoto">Add Photo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Galery" asp-action="ListPhoto">List Photos</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
