--- a/QBU9QL_szerveroldali/wwwroot/css/site.css
+++ b/QBU9QL_szerveroldali/wwwroot/css/site.css
@@ -1,24 +1,47 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
-img{
+img {
     width: 50px;
     height: 50px;
     border-radius: 50px;
+}
+
+.photoForm {
+    display: flex;
+    flex-direction: column;
+}
+
+    .photoForm label, input {
+        margin: 10px;
+        padding: 5px;
+    }
+
+.card img {
+    height: 260px;
+}
+
+@media screen and (max-width: 600px){
+    .card{
+        grid-template-columns: auto;
+    }
+    .photoForm{
+        width : 100vw;
+    }
 }
